kokoa html css 4

--- a/kokoa-ssh.html
+++ b/kokoa-ssh.html
@@ -1,1 +1,8 @@
-Hello! 2022-05-06 New cumputer!!!
+<!DOCTYPE html>
+<html lang="kr">
+  <head>
+    <title>TOYOTA Supra</title>
+    <style></style>
+  </head>
+  <body></body>
+</html>
