kokoa html css 4

--- a/kokoa-ssh.html
+++ b/kokoa-ssh.html
@@ -2,7 +2,24 @@
 <html lang="kr">
   <head>
     <title>TOYOTA Supra</title>
-    <style></style>
+    <style>
+      a {
+        color: wheat;
+        background-color: tomato;
+        text-decoration: none;
+        padding: 3px 5px;
+        border-radius: 5px;
+        font-size: 55px;
+        transition: all 1s ease-in-out;
+      }
+      a:hover {
+        border-radius: 20px;
+        color: tomato;
+        background-color: wheat;
+      }
+    </style>
   </head>
-  <body></body>
+  <body>
+    <a href="#">Go home</a>
+  </body>
 </html>
