--- a/kokoa-ssh.html
+++ b/kokoa-ssh.html
@@ -3,23 +3,17 @@
   <head>
     <title>TOYOTA Supra</title>
     <style>
-      a {
-        color: wheat;
-        background-color: tomato;
-        text-decoration: none;
-        padding: 3px 5px;
-        border-radius: 5px;
-        font-size: 55px;
-        transition: all 1s ease-in-out;
+      img {
+        border: 10px solid black;
+        border-radius: 50%;
+        transition: transform 2s ease-in-out;
       }
-      a:hover {
-        border-radius: 20px;
-        color: tomato;
-        background-color: wheat;
+      img:hover {
+        transform: matrix(1, 2, 3, 4, 5, 6);
       }
     </style>
   </head>
   <body>
-    <a href="#">Go home</a>
+    <img src="img/logo.jpg" />
   </body>
 </html>
