--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome to Kokoa Clone</title>
@@ -17,6 +18,7 @@
       <div class="status-bar__column">
         <span>110%</span>
         <i class="fa-solid fa-battery-full"></i>
+        <!--fa-2x = 아이콘 사이즈변경-->
         <i class="fa-solid fa-bolt-lightning"></i>
       </div>
     </div>
