--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
       </p>
     </header>
 
-    <form id="login-form">
-      <input type="text" placeholder="Email or phone number" />
+    <form action="friends.html" nethod="get" id="login-form">
+      <!--POST는 서버가있을때-->
+      <input name="username" type="text" placeholder="Email or phone number" />
       <input type="password" placeholder="password" />
       <input type="submit" value="Log In" />
       <a href="#">Find Kokoa Account or password</a>
