--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="status-bar__column">
         <span>110%</span>
         <i class="fa-solid fa-battery-full"></i>
-        <!--fa-2x = 아이콘 사이즈변경-->
+        <!--fa-2x,lg = 아이콘 사이즈변경-->
         <i class="fa-solid fa-bolt-lightning"></i>
       </div>
     </div>
