--- a/friends.html
+++ b/friends.html
@@ -1,1 +1,49 @@
-hello this is friends.
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <link rel="stylesheet" href="css/styles.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Friends - Kokoa Clone</title>
+  </head>
+  <body>
+    <div class="status-bar">
+      <div class="status-bar__column">
+        <span>No Service</span>
+        <i class="fa-solid fa-wifi"></i>
+      </div>
+      <div class="status-bar__column">
+        <span>18:43</span>
+      </div>
+      <div class="status-bar__column">
+        <span>110%</span>
+        <i class="fa-solid fa-battery-full"></i>
+        <!--fa-2x = 아이콘 사이즈변경-->
+        <i class="fa-solid fa-bolt-lightning"></i>
+      </div>
+    </div>
+
+    <nav class="nav">
+      <ul class="nav__list">
+        <li class="nav__btn">
+          <a class="link" href="friends.html"><i class="fa-solid fa-user fa-2x"></i></a>
+        </li>
+        <li class="nav__btn">
+          <a class="link" href="#"><i class="fa-regular fa-comment fa-2x"></i></a>
+        </li>
+        <li class="nav__btn">
+          <a class="link" href="#"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a>
+        </li>
+        <li class="nav__btn">
+          <a class="link" href="#"><i class="fa-solid fa-ellipsis fa-2x"></i></i></a>
+        </li>
+      </ul>
+    </nav>
+    <!--nav>ul>li*>a 한번에 만들어지는법-->
+
+    <script
+      src="https://kit.fontawesome.com/a683deb628.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
