--- a/friends.html
+++ b/friends.html
@@ -23,19 +23,38 @@
       </div>
     </div>
 
+    <header class="screen-header">
+      <h1 class="screen-header__title">Friends</h1>
+      <div class="screen-header__icons">
+        <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
+        <span><i class="fa-solid fa-music fa-lg"></i></span>
+        <span><i class="fa-solid fa-gear fa-lg"></i></span>
+      </div>
+    </header>
+
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
-          <a class="link" href="friends.html"><i class="fa-solid fa-user fa-2x"></i></a>
+          <a class="nav__link" href="friends.html"
+            ><i class="fa-solid fa-user fa-2x"></i
+          ></a>
         </li>
         <li class="nav__btn">
-          <a class="link" href="#"><i class="fa-regular fa-comment fa-2x"></i></a>
+          <a class="nav__link" href="#">
+            <spnn class="nav__notification">1</spnn
+            ><i class="fa-regular fa-comment fa-2x"></i
+          ></a>
         </li>
         <li class="nav__btn">
-          <a class="link" href="#"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a>
+          <a class="nav__link" href="#"
+            ><i class="fa-solid fa-magnifying-glass fa-2x"></i
+          ></a>
         </li>
         <li class="nav__btn">
-          <a class="link" href="#"><i class="fa-solid fa-ellipsis fa-2x"></i></i></a>
+          <a class="nav__link" href="#">
+            <spnn class="nav__notification2"></spnn
+            ><i class="fa-solid fa-ellipsis fa-2x"></i
+          ></a>
         </li>
       </ul>
     </nav>
