--- a/friends.html
+++ b/friends.html
@@ -32,6 +32,46 @@
       </div>
     </header>
 
+    <a id="friedns-display-link">
+      <i class="fa-solid fa-circle-info"></i> Friends' Names Display
+      <i class="fa-solid fa-chevron-right fa-xs"></i>
+    </a>
+
+    <main class="friends-screen">
+      <!--끝에 *숫자 하면 개수대로생성 -->
+      <div class="user-component">
+        <div class="user-component__column">
+          <img
+            src="screenshots/car.jpg"
+            class="user-component__avatar user-component__avatar--xl"
+          />
+          <div class="user-component__text"></div>
+          <h4 class="user-component__title">Mycar</h4>
+          <!-- h6 class="user-component__subtitle">Toyota Supra</h6 -->
+        </div>
+        <div class="user-component__column"></div>
+      </div>
+      <div class="friends-screen__channel">
+        <div class="friends-screen__channel-header">
+          <span>Channel</span>
+          <i class="fa-solid fa-chevron-up fa-sm"></i>
+        </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="screenshots/car.jpg"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__text"></div>
+            <h4 class="user-component__title">Channel</h4>
+          </div>
+          <div class="user-component__column">
+            <span>2 <i class="fa-solid fa-chevron-right fa-xs"></i></span>
+          </div>
+        </div>
+      </div>
+    </main>
+
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
