--- a/friends.html
+++ b/friends.html
@@ -59,11 +59,13 @@
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="screenshots/car.jpg"
+              src="screenshots/gr86.jpg"
               class="user-component__avatar user-component__avatar--sm"
             />
             <div class="user-component__text"></div>
-            <h4 class="user-component__title">Channel</h4>
+            <h4 class="user-component__title user-component__title--not-bold">
+              Channel
+            </h4>
           </div>
           <div class="user-component__column">
             <span>2 <i class="fa-solid fa-chevron-right fa-xs"></i></span>
