--- a/chats.html
+++ b/chats.html
@@ -52,6 +52,25 @@
         </div>
       </div>
     </main>
+    <br /><br />
+    <main class="main-screen">
+      <div class="user-component">
+        <div class="user-component__column">
+          <img
+            src="screenshots/gr86.jpg"
+            class="user-component__avatar user-component__avatar"
+          />
+          <div class="user-component__text">
+            <h4 class="user-component__title">Mycar 2</h4>
+            <h6 class="user-component__subtitle">Toyota Supra red</h6>
+          </div>
+        </div>
+        <div class="user-component__column">
+          <span class="user-component__time">21:22</span>
+          <div class="badge">3</div>
+        </div>
+      </div>
+    </main>
 
     <nav class="nav">
       <ul class="nav__list">
