--- a/friends.html
+++ b/friends.html
@@ -64,7 +64,7 @@
             />
             <div class="user-component__text"></div>
             <h4 class="user-component__title user-component__title--not-bold">
-              Channel
+              Mycar 2
             </h4>
           </div>
           <div class="user-component__column">
