--- a/find.html
+++ b/find.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chats - Kokoa Clone</title>
+    <title>Find - Kokoa Clone</title>
   </head>
   <body>
     <div class="status-bar">
@@ -24,49 +24,27 @@
     </div>
 
     <header class="screen-header">
-      <h1 class="screen-header__title">Chats</h1>
+      <h1 class="screen-header__title">Find</h1>
       <div class="screen-header__icons">
         <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
-        <span><i class="fa-solid fa-comment-dots fa-lg"></i></span>
-        <span><i class="fa-solid fa-music fa-lg"></i></span>
         <span><i class="fa-solid fa-gear fa-lg"></i></span>
       </div>
     </header>
 
     <main class="main-screen">
-      <!--끝에 *숫자 하면 개수대로생성 -->
-      <div class="user-component">
-        <div class="user-component__column">
-          <img
-            src="screenshots/car.jpg"
-            class="user-component__avatar user-component__avatar"
-          />
-          <div class="user-component__text">
-            <h4 class="user-component__title">Mycar</h4>
-            <h6 class="user-component__subtitle">Toyota Supra</h6>
-          </div>
+      <div class="find-icons">
+        <!--  아래 처럼 생김 find-icons__icon*4>span  -->
+        <div class="find-icons__icon">
+          <i class="fa-solid fa-qrcode"></i><span>Qr Code</span>
         </div>
-        <div class="user-component__column">
-          <span class="user-component__time">21:22</span>
-          <div class="badge">1</div>
+        <div class="find-icons__icon">
+          <i class="fa-solid fa-address-book"></i><span>Add by Contacts</span>
         </div>
-      </div>
-    </main>
-    <main class="main-screen">
-      <div class="user-component">
-        <div class="user-component__column">
-          <img
-            src="screenshots/gr86.jpg"
-            class="user-component__avatar user-component__avatar"
-          />
-          <div class="user-component__text">
-            <h4 class="user-component__title">Mycar 2</h4>
-            <h6 class="user-component__subtitle">Toyota Supra red</h6>
-          </div>
+        <div class="find-icons__icon">
+          <i class="fa-solid fa-fingerprint"></i><span>Add by Id</span>
         </div>
-        <div class="user-component__column">
-          <span class="user-component__time">18:24</span>
-          <div class="badge">3</div>
+        <div class="find-icons__icon">
+          <i class="fa-solid fa-envelope"></i><span>Invite</span>
         </div>
       </div>
     </main>
@@ -81,7 +59,7 @@
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
             <spnn class="nav__notification badge">1</spnn>
-            <i class="fa-solid fa-comment fa-2x"></i
+            <i class="fa-regular fa-comment fa-2x"></i
           ></a>
         </li>
         <li class="nav__btn">
