--- a/find.html
+++ b/find.html
@@ -27,24 +27,63 @@
       <h1 class="screen-header__title">Find</h1>
       <div class="screen-header__icons">
         <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
-        <span><i class="fa-solid fa-gear fa-lg"></i></span>
+        <span
+          ><a href="settings.html"><i class="fa-solid fa-gear fa-lg"></i></a
+        ></span>
       </div>
     </header>
 
     <main class="main-screen">
-      <div class="find-icons">
-        <!--  아래 처럼 생김 find-icons__icon*4>span  -->
-        <div class="find-icons__icon">
+      <div class="icon-row">
+        <!--  아래 처럼 생김 icon-row__icon*4>span  -->
+        <div class="icon-row__icon">
           <i class="fa-solid fa-qrcode"></i><span>Qr Code</span>
         </div>
-        <div class="find-icons__icon">
+        <div class="icon-row__icon">
           <i class="fa-solid fa-address-book"></i><span>Add by Contacts</span>
         </div>
-        <div class="find-icons__icon">
+        <div class="icon-row__icon">
           <i class="fa-solid fa-fingerprint"></i><span>Add by Id</span>
         </div>
-        <div class="find-icons__icon">
+        <div class="icon-row__icon">
           <i class="fa-solid fa-envelope"></i><span>Invite</span>
+        </div>
+      </div>
+      <div class="recommended-friends">
+        <h6 class="recommended-friends__title">Recommended friends</h6>
+        <span>You have no recommended friends.</span>
+      </div>
+      <div class="open-chat">
+        <div class="open-chat__header">
+          <h4>Open Chat</h4>
+          <span
+            >Go to Openchat Home <i class="fa-solid fa-chevron-right fa-xs"></i
+          ></span>
+        </div>
+        <div class="open-post">
+          <!-- .open-post column*2 -->
+          <div class="open-post__column">
+            <h5 class="open-post__title">#TOYOTA</h5>
+            <h6 class="open-post__hashtags">#toyota#gr86</h6>
+            <div class="open-post__members">
+              <img
+                src="file:///C:/Users/KOR/Desktop/%EC%BD%94%EB%94%A9/kokoa-ssh/screenshots/gr86.jpg"
+              />
+              <span class="open-post__memver-count">4516 members</span>
+              <div class="divider"></div>
+              <span class="open-post__memver-status">Active</span>
+            </div>
+          </div>
+          <div class="open-post__column">
+            <div class="open-post__photo">
+              <img
+                src="file:///C:/Users/KOR/Desktop/%EC%BD%94%EB%94%A9/kokoa-ssh/screenshots/gr86.jpg"
+              />
+              <div class="open-post__heart-count fa-xs">
+                <i class="fa-solid fa-heart"></i><span>321</span>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </main>
