--- a/chats.html
+++ b/chats.html
@@ -36,23 +36,25 @@
     </header>
 
     <main class="main-screen">
-      <!--끝에 *숫자 하면 개수대로생성 -->
-      <div class="user-component">
-        <div class="user-component__column">
-          <img
-            src="screenshots/car.jpg"
-            class="user-component__avatar user-component__avatar"
-          />
-          <div class="user-component__text">
-            <h4 class="user-component__title">Mycar</h4>
-            <h6 class="user-component__subtitle">Toyota Supra</h6>
+      <a href="chat.html">
+        <!--끝에 *숫자 하면 개수대로생성 -->
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="screenshots/car.jpg"
+              class="user-component__avatar user-component__avatar"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title">Mycar</h4>
+              <h6 class="user-component__subtitle">Toyota Supra</h6>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span class="user-component__time">21:22</span>
+            <div class="badge">1</div>
           </div>
         </div>
-        <div class="user-component__column">
-          <span class="user-component__time">21:22</span>
-          <div class="badge">1</div>
-        </div>
-      </div>
+      </a>
     </main>
     <main class="main-screen">
       <div class="user-component">
