--- a/chat.html
+++ b/chat.html
@@ -64,11 +64,11 @@
 
     <form class="reply">
       <div class="reply__column">
-        <i class="fa-solid fa-square-plus"></i>
+        <i class="fa-solid fa-square-plus fa-lg"></i>
       </div>
       <div class="reply__column">
         <input type="text" placeholder="Write a message..." />
-        <i class="fa-solid fa-face-grin"></i>
+        <i class="fa-solid fa-face-grin fa-lg"></i>
         <button><i class="fa-solid fa-arrow-up"></i></button>
       </div>
     </form>
