--- a/friends.html
+++ b/friends.html
@@ -104,6 +104,10 @@
     </nav>
     <!--nav>ul>li*>a 한번에 만들어지는법-->
 
+    <div id="splash-screen">
+      <i class="fa-solid fa-comment"></i>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/a683deb628.js"
       crossorigin="anonymous"
