--- a/more.html
+++ b/more.html
@@ -113,6 +113,10 @@
     </nav>
     <!--nav>ul>li*>a 한번에 만들어지는법-->
 
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/a683deb628.js"
       crossorigin="anonymous"
